cleaning cannes grand prix base

--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -456,11 +456,13 @@
    "source": [
     "ac_bd_cl = ac_bd.drop (['0', 'Ref.', 'Wins', 'Director', 'Nominations', 'Record', 'Age' ], axis=1)\n",
     "ac_bd_cl = ac_bd_cl.iloc[:473, :]\n",
-    "\n",
+    "#conversion de l'année en type date \n",
     "ac_bd_cl['Year'] = ac_bd_cl['Year'].astype(str)\n",
     "ac_bd_cl['Year'] = ac_bd_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
     "ac_bd_cl['Year'] = pd.to_datetime(ac_bd_cl['Year'], format='%Y', errors='coerce')\n",
+    "#renommer la colonne director\n",
     "ac_bd_cl.rename(columns={'Director(s)': 'Director'}, inplace=True)\n",
+    "#suppression des lignes inutiles (celles qui ne contiennent que l'année sans film\n",
     "ac_bd_cl = ac_bd_cl.dropna(subset=['Director', 'Film'], how='all')\n",
     "\n",
     "ac_bd_cl\n",
@@ -469,18 +471,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "id": "be6fe544-6e3f-4ef1-adf0-7d42b58c63af",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "DataFrame after processing:\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -502,7 +496,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year of Film Release</th>\n",
+       "      <th>Year</th>\n",
        "      <th>Film</th>\n",
        "      <th>Film Studio</th>\n",
        "      <th>Film Studio/Producer(s)</th>\n",
@@ -511,68 +505,80 @@
        "      <th>Nominations</th>\n",
        "      <th>Wins</th>\n",
        "      <th>StudioName</th>\n",
+       "      <th>Producer</th>\n",
+       "      <th>Studio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>Wings</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Famous Players–Lasky</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>7th Heaven</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Fox</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>William Fox, producer</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1927/28 (1st)</td>\n",
+       "      <td>1927-01-01</td>\n",
        "      <td>The Racket</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>The Caddo Company</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Howard Hughes, producer</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1928/29 (2nd) [a]</td>\n",
+       "      <th>5</th>\n",
+       "      <td>1928-01-01</td>\n",
+       "      <td>The Broadway Melody</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Metro-Goldwyn-Mayer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1928-01-01</td>\n",
+       "      <td>Alibi</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Feature Productions</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -585,129 +591,128 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>714</th>\n",
+       "      <th>681</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>The Fabelmans</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Pixar Animation Studios</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>715</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Hollywood Pictures</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>716</th>\n",
+       "      <th>682</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Tár</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>The Caddo Company</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>683</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Top Gun: Maverick</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>717</th>\n",
+       "      <th>684</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Triangle of Sadness</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Walter Wanger (production company)</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>718</th>\n",
+       "      <th>685</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Women Talking</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Mercury</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>719 rows × 9 columns</p>\n",
+       "<p>591 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Year of Film Release        Film           Film Studio  \\\n",
-       "0          1927/28 (1st)         NaN                   NaN   \n",
-       "1          1927/28 (1st)       Wings  Famous Players–Lasky   \n",
-       "2          1927/28 (1st)  7th Heaven                   Fox   \n",
-       "3          1927/28 (1st)  The Racket     The Caddo Company   \n",
-       "4      1928/29 (2nd) [a]         NaN                   NaN   \n",
-       "..                   ...         ...                   ...   \n",
-       "714                  NaN         NaN                   NaN   \n",
-       "715                  NaN         NaN                   NaN   \n",
-       "716                  NaN         NaN                   NaN   \n",
-       "717                  NaN         NaN                   NaN   \n",
-       "718                  NaN         NaN                   NaN   \n",
+       "          Year                 Film Film Studio Film Studio/Producer(s)  \\\n",
+       "1   1927-01-01                Wings        None                     NaN   \n",
+       "2   1927-01-01           7th Heaven        None                     NaN   \n",
+       "3   1927-01-01           The Racket        None                     NaN   \n",
+       "5   1928-01-01  The Broadway Melody        None                     NaN   \n",
+       "6   1928-01-01                Alibi        None                     NaN   \n",
+       "..         ...                  ...         ...                     ...   \n",
+       "681 2022-01-01        The Fabelmans        None                     NaN   \n",
+       "682 2022-01-01                  Tár        None                     NaN   \n",
+       "683 2022-01-01    Top Gun: Maverick        None                     NaN   \n",
+       "684 2022-01-01  Triangle of Sadness        None                     NaN   \n",
+       "685 2022-01-01        Women Talking        None                     NaN   \n",
        "\n",
-       "    Film Studio/Producer(s)  \\\n",
-       "0                       NaN   \n",
-       "1                       NaN   \n",
-       "2                       NaN   \n",
-       "3                       NaN   \n",
-       "4                       NaN   \n",
-       "..                      ...   \n",
-       "714                     NaN   \n",
-       "715                     NaN   \n",
-       "716                     NaN   \n",
-       "717                     NaN   \n",
-       "718                     NaN   \n",
+       "    Producer(s) Production Company  Nominations  Wins StudioName  Producer  \\\n",
+       "1          None                NaN          NaN   NaN        NaN       NaN   \n",
+       "2          None                NaN          NaN   NaN        NaN       NaN   \n",
+       "3          None                NaN          NaN   NaN        NaN       NaN   \n",
+       "5          None                NaN          NaN   NaN        NaN       NaN   \n",
+       "6          None                NaN          NaN   NaN        NaN       NaN   \n",
+       "..          ...                ...          ...   ...        ...       ...   \n",
+       "681        None                NaN          NaN   NaN        NaN       NaN   \n",
+       "682        None                NaN          NaN   NaN        NaN       NaN   \n",
+       "683        None                NaN          NaN   NaN        NaN       NaN   \n",
+       "684        None                NaN          NaN   NaN        NaN       NaN   \n",
+       "685        None                NaN          NaN   NaN        NaN       NaN   \n",
        "\n",
-       "                                           Producer(s)  \\\n",
-       "0                                                  NaN   \n",
-       "1    Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...   \n",
-       "2                                William Fox, producer   \n",
-       "3                              Howard Hughes, producer   \n",
-       "4                                                  NaN   \n",
-       "..                                                 ...   \n",
-       "714                                                NaN   \n",
-       "715                                                NaN   \n",
-       "716                                                NaN   \n",
-       "717                                                NaN   \n",
-       "718                                                NaN   \n",
+       "                   Studio  \n",
+       "1    Famous Players–Lasky  \n",
+       "2                     Fox  \n",
+       "3       The Caddo Company  \n",
+       "5     Metro-Goldwyn-Mayer  \n",
+       "6     Feature Productions  \n",
+       "..                    ...  \n",
+       "681                   NaN  \n",
+       "682                   NaN  \n",
+       "683                   NaN  \n",
+       "684                   NaN  \n",
+       "685                   NaN  \n",
        "\n",
-       "                     Production Company  Nominations  Wins StudioName  \n",
-       "0                                   NaN          NaN   NaN        NaN  \n",
-       "1                                   NaN          NaN   NaN        NaN  \n",
-       "2                                   NaN          NaN   NaN        NaN  \n",
-       "3                                   NaN          NaN   NaN        NaN  \n",
-       "4                                   NaN          NaN   NaN        NaN  \n",
-       "..                                  ...          ...   ...        ...  \n",
-       "714             Pixar Animation Studios          2.0   0.0        NaN  \n",
-       "715                  Hollywood Pictures          2.0   0.0        NaN  \n",
-       "716                   The Caddo Company          2.0   0.0        NaN  \n",
-       "717  Walter Wanger (production company)          2.0   0.0        NaN  \n",
-       "718                             Mercury          2.0   0.0        NaN  \n",
-       "\n",
-       "[719 rows x 9 columns]"
+       "[591 rows x 11 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,20 +729,29 @@
     "            return entry.strip(), None\n",
     "    else:\n",
     "        return entry, None\n",
-    "        \n",
-    "# Apply the function to the 'Film Studio' column\n",
-    "ac_bf_cl[['Studio', 'Producer']] = ac_bf_cl['Film Studio'].apply(extract_studio_producer).apply(pd.Series)\n",
     "\n",
-    "ac_bf_cl['Film Studio'] = ac_bf_cl['Studio']\n",
+    "# Apply the function to create a new column 'Studio_Producers'\n",
+    "ac_bf_cl['Studio_Producers'] = ac_bf_cl['Film Studio/Producer(s)'].apply(extract_studio_producer)\n",
     "\n",
-    "# Fill missing 'Producer(s)' values using 'Producer' only when 'Producer(s)' is NaN\n",
-    "mask = ac_bf_cl['Producer(s)'].isna()\n",
-    "ac_bf_cl.loc[mask, 'Producer(s)'] = ac_bf_cl['Producer']\n",
+    "# Extract only studio names from 'Film Studio'\n",
+    "ac_bf_cl['Film Studio'] = ac_bf_cl['Studio_Producers'].apply(lambda x: x[0] if x and pd.notna(x[0]) else None)\n",
     "\n",
-    "# Drop the intermediate 'Studio' and 'Producer' columns\n",
-    "ac_bf_cl = ac_bf_cl.drop(columns=['Studio', 'Producer'])\n",
-    "# Display the DataFrame after processing\n",
-    "print(\"\\nDataFrame after processing:\")\n",
+    "# Extract only producer names from 'Film Studio/Producer(s)'\n",
+    "ac_bf_cl['Producer(s)'] = ac_bf_cl['Studio_Producers'].apply(lambda x: x[1] if x and pd.notna(x[1]) else None)\n",
+    "\n",
+    "# Drop the intermediate 'Studio_Producers' column\n",
+    "ac_bf_cl = ac_bf_cl.drop(columns=['Studio_Producers'])\n",
+    "\n",
+    "\n",
+    "ac_bf_cl.rename(columns={'Year of Film Release': 'Year'}, inplace=True)\n",
+    "\n",
+    "ac_bf_cl['Year'] = ac_bf_cl['Year'].astype(str)\n",
+    "ac_bf_cl['Year'] = ac_bf_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
+    "ac_bf_cl['Year'] = pd.to_datetime(ac_bf_cl['Year'], format='%Y', errors='coerce')\n",
+    "\n",
+    "ac_bf_cl = ac_bf_cl.dropna(subset=['Film'], how='all')\n",
+    "\n",
+    "\n",
     "ac_bf_cl"
    ]
   },
@@ -745,6 +759,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2dfa092d-4fdb-4ec6-9103-cae072ef2565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "can_gp_cl=can_gp\n",
+    "h=can_gp_cl.columns\n",
+    "#renommer les colonnes qui ont été mal scrappées\n",
+    "can_gp_cl.rename(columns={h[0]: 'Year', h[1] : 'English_title' , h[2]:'Original_title', h[3]:'Director', h[4]:'Production_country' }, inplace=True)\n",
+    "\n",
+    "#conversion en type date de la colonne year \n",
+    "can_gp_cl['Year'] = can_gp_cl['Year'].astype(str)\n",
+    "can_gp_cl['Year'] = can_gp_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
+    "can_gp_cl['Year'] = pd.to_datetime(can_gp_cl['Year'], format='%Y', errors='coerce')\n",
+    "\n",
+    "can_gp_cl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0aef6e-e273-410f-96a1-11db2819bd24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8493b9-8b7a-4271-82b6-91ced3670121",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f542f66c-cf75-415e-9187-532837a10304",
    "metadata": {},
    "outputs": [],
    "source": []
