--- a/wiki_scrap/fonction_scrapping.ipynb
+++ b/wiki_scrap/fonction_scrapping.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "def get_tables_from_wikipedia(url):\n",
-    "    # Fetch HTML content from the Wikipedia URL\n",
+    "    # récupérer le HTML à partit du lien URL\n",
     "    response = requests.get(url)\n",
     "    if response.status_code != 200:\n",
     "        print(f\"Failed to retrieve the HTML. Status code: {response.status_code}\")\n",
@@ -65,13 +65,13 @@
     "        try:\n",
     "            df = pd.read_html(StringIO(str(table)))[0]\n",
     "            dataframes.append(df)\n",
-    "            print(f\"Table {i + 1} successfully scraped.\")\n",
+    "            print(f\"Table {i + 1} successfully scraped.\") #notifier que la table a bien été scrappée \n",
     "        except Exception as e:\n",
     "            print(f\"Error processing table {i + 1}: {e}\")\n",
     "\n",
     "    return dataframes\n",
     "\n",
-    "#fonction qui concatene toutes les tables de la page\n",
+    "#fonction qui concatene toutes les tables de la page et les sauvegarde dans un fichier csv \n",
     "def save_tables_to_csv(tables, output_file='merged_tables.csv', folder_path='work/movies/wiki_scrap'):\n",
     "    if not os.path.exists(folder_path):\n",
     "        os.makedirs(folder_path)\n",
@@ -80,10 +80,10 @@
     "    file_path = os.path.join(folder_path, output_file)\n",
     "    \n",
     "    \n",
-    "    # Concatenate all DataFrames along rows (axis=0)\n",
+    "    # concatenation des datatframes de la table\n",
     "    merged_df = pd.concat(tables, axis=0, ignore_index=True)\n",
     "\n",
-    "    # Save the merged DataFrame to a CSV file\n",
+    "    # Sauvegarder dans un fichier csv \n",
     "    merged_df.to_csv(file_path, index=False)\n",
     "    print(f'Merged tables saved to {file_path}')\n"
    ]
