--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -27,6 +27,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc143446-3b9a-43aa-b2ef-5f2e7cca6e2f",
+   "metadata": {},
+   "source": [
+    "- [ ] ac_bf\n",
+    "- [ ] ac_bd\n",
+    "- [ ] ac_bc\n",
+    "- [ ] can_gp\n",
+    "- [ ] can_jr\n",
+    "- [ ] can_po\n",
+    "- [ ] ces_bd\n",
+    "- [ ] ces_bf\n",
+    "- [ ] ven_lor\n",
+    "- [ ] ven_larg\n",
+    "- [ ] ven_gj"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "51544ce2-25d7-49f5-a38b-cb224ca714da",
@@ -487,9 +505,9 @@
     "ac_bd_cl['Year'] = ac_bd_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
     "ac_bd_cl['Year'] = pd.to_datetime(ac_bd_cl['Year'], format='%Y', errors='coerce')\n",
     "#renommer la colonne director\n",
-    "ac_bd_cl.rename(columns={'Director(s)': 'Director'}, inplace=True)\n",
+    "ac_bd_cl.rename(columns={'Director(s)': 'Directors'}, inplace=True)\n",
     "#suppression des lignes inutiles (celles qui ne contiennent que l'année sans film\n",
-    "ac_bd_cl = ac_bd_cl.dropna(subset=['Director', 'Film'], how='all')\n",
+    "ac_bd_cl = ac_bd_cl.dropna(subset=['Directors', 'Film'], how='all')\n",
     "\n",
     "ac_bd_cl\n",
     "\n"
@@ -783,31 +801,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "id": "2dfa092d-4fdb-4ec6-9103-cae072ef2565",
    "metadata": {},
    "outputs": [],
    "source": [
-    "can_gp_cl=can_gp\n",
-    "h=can_gp_cl.columns\n",
+    "can_gp_cl = can_gp\n",
+    "h = can_gp_cl.columns\n",
     "#renommer les colonnes qui ont été mal scrappées\n",
     "can_gp_cl.rename(columns={h[0]: 'Year', h[1] : 'English_title' , h[2]:'Original_title', h[3]:'Director', h[4]:'Production_country' }, inplace=True)\n",
-    "can_gp_cl\n",
-    "\n",
+    "#suppression lignes non voulues\n",
+    "decades_to_delete = [f\"{decade}s\" for decade in range(1960, 2030, 10)]\n",
+    "can_gp_cl = can_gp_cl.loc[~can_gp_cl['English_title'].isin(decades_to_delete)]\n",
+    "can_gp_cl = can_gp_cl.reset_index(drop=True)\n",
     "#conversion en type date de la colonne year \n",
-    "can_gp_cl['Year'] = can_gp_cl['Year'].astype(str)\n",
-    "can_gp_cl['Year'] = can_gp_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
-    "can_gp_cl['Year'] = pd.to_datetime(can_gp_cl['Year'], format='%Y', errors='coerce')\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "1d0aef6e-e273-410f-96a1-11db2819bd24",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>English_title</th>\n",
+       "      <th>Original_title</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Production_country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1967-01-01</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>Accident</td>\n",
+       "      <td>Joseph Losey</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1967-01-01</td>\n",
+       "      <td>I Even Met Happy Gypsies</td>\n",
+       "      <td>Skupljači perja</td>\n",
+       "      <td>Aleksandar Petrović</td>\n",
+       "      <td>Yugoslavia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1969-01-01</td>\n",
+       "      <td>Ådalen 31</td>\n",
+       "      <td>Ådalen 31</td>\n",
+       "      <td>Bo Widerberg</td>\n",
+       "      <td>Sweden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1970-01-01</td>\n",
+       "      <td>Investigation of a Citizen Above Suspicion</td>\n",
+       "      <td>Indagine su un cittadino al di sopra di ogni s...</td>\n",
+       "      <td>Elio Petri</td>\n",
+       "      <td>Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1971-01-01</td>\n",
+       "      <td>Johnny Got His Gun</td>\n",
+       "      <td>Johnny Got His Gun</td>\n",
+       "      <td>Dalton Trumbo</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>Atlantics</td>\n",
+       "      <td>Atlantique</td>\n",
+       "      <td>Mati Diop</td>\n",
+       "      <td>France, Senegal, Belgium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>Compartment No. 6</td>\n",
+       "      <td>Hytti nro 6</td>\n",
+       "      <td>Juho Kuosmanen</td>\n",
+       "      <td>Finland, Germany, Estonia, Russia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>A Hero</td>\n",
+       "      <td>قهرمان</td>\n",
+       "      <td>Asghar Farhadi</td>\n",
+       "      <td>Iran, France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Close</td>\n",
+       "      <td>Lukas Dhont</td>\n",
+       "      <td>Belgium, Netherlands, France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>Stars at Noon</td>\n",
+       "      <td>Stars at Noon</td>\n",
+       "      <td>Claire Denis</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>65 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Year                               English_title  \\\n",
+       "0  1967-01-01                                    Accident   \n",
+       "1  1967-01-01                    I Even Met Happy Gypsies   \n",
+       "2  1969-01-01                                   Ådalen 31   \n",
+       "3  1970-01-01  Investigation of a Citizen Above Suspicion   \n",
+       "4  1971-01-01                          Johnny Got His Gun   \n",
+       "..        ...                                         ...   \n",
+       "60 2019-01-01                                   Atlantics   \n",
+       "61 2021-01-01                           Compartment No. 6   \n",
+       "62 2021-01-01                                      A Hero   \n",
+       "63 2022-01-01                                       Close   \n",
+       "64 2022-01-01                               Stars at Noon   \n",
+       "\n",
+       "                                       Original_title             Director  \\\n",
+       "0                                            Accident         Joseph Losey   \n",
+       "1                                     Skupljači perja  Aleksandar Petrović   \n",
+       "2                                           Ådalen 31         Bo Widerberg   \n",
+       "3   Indagine su un cittadino al di sopra di ogni s...           Elio Petri   \n",
+       "4                                  Johnny Got His Gun        Dalton Trumbo   \n",
+       "..                                                ...                  ...   \n",
+       "60                                         Atlantique            Mati Diop   \n",
+       "61                                        Hytti nro 6       Juho Kuosmanen   \n",
+       "62                                             قهرمان       Asghar Farhadi   \n",
+       "63                                              Close          Lukas Dhont   \n",
+       "64                                      Stars at Noon         Claire Denis   \n",
+       "\n",
+       "                   Production_country  \n",
+       "0                      United Kingdom  \n",
+       "1                          Yugoslavia  \n",
+       "2                              Sweden  \n",
+       "3                               Italy  \n",
+       "4                       United States  \n",
+       "..                                ...  \n",
+       "60           France, Senegal, Belgium  \n",
+       "61  Finland, Germany, Estonia, Russia  \n",
+       "62                       Iran, France  \n",
+       "63       Belgium, Netherlands, France  \n",
+       "64                             France  \n",
+       "\n",
+       "[65 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "can_gp_cl['Year'] = can_gp_cl['Year'].astype(str)\n",
+    "can_gp_cl['Year'] = can_gp_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
+    "can_gp_cl['Year'] = pd.to_datetime(can_gp_cl['Year'], format='%Y', errors='coerce')\n",
+    "\n",
+    "can_gp_cl= can_gp_cl.iloc[:65, :5]\n",
+    "can_gp_cl"
+   ]
   },
   {
    "cell_type": "code",
